--- a/OrderIdsAnalyzer.csproj
+++ b/OrderIdsAnalyzer.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomNumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
